--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'United States. Marine Corps. Marine Raider Regiment, 1st -- History'
 - !lcc 'D731'
 - !lcsh 'World War, 1939-1945 -- Amphibious operations'
+- GITenberg
 title: 'From Makin to Bougainville: Marine Raiders in the Pacific War'
 url: http://www.gutenberg.org/ebooks/48811
